<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/black_round_transparent_background"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/orangebackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            android:contentDescription="@string/backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/roomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/videoCall"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/chatRoomUsersListView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRoomUsersListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:foregroundGravity="center|center_horizontal"
            android:isScrollContainer="false"
            android:minHeight="40dp"
            android:scrollbars="horizontal"
            android:soundEffectsEnabled="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/videoCall"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:reverseLayout="true"
            app:stackFromEnd="false"
            android:layout_marginLeft="16dp" />

        <ImageButton
            android:id="@+id/videoCall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/videocall"
            android:contentDescription="@string/videocall"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998"
            android:layout_marginRight="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:scrollbars="horizontal|none"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/typingCons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/typingCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/writemessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/messageRecycleView">

        <androidx.cardview.widget.CardView
            android:id="@+id/typerImagecardview"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/profileavatar"
            app:cardCornerRadius="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/typerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/profileavatar"
                android:contentDescription="TODO" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/is_typing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/typerImagecardview"
            app:layout_constraintTop_toTopOf="@+id/typerImagecardview"
            app:layout_constraintVertical_bias="0.92"
            android:layout_marginLeft="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/writemessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/greenround"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center|start"
        android:hint="@string/typeMessage"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textNoSuggestions|text"
        android:padding="12dp"
        android:scrollHorizontally="false"
        android:textAlignment="viewStart"
        android:textColor="#F3FAF9F9"
        android:textColorHint="#DCCEB1B1"
        android:textIsSelectable="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp" />

    <ImageButton
        android:id="@+id/send"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/send"
        android:contentDescription="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/writemessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/writemessage"
        android:layout_marginRight="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>